force-app/main/default/objects/Doctor__c/fields/Clinic_Provider_Number__c.field-meta.xml
<CustomField>
    <fullName>Clinic_Provider_Number__c</fullName>
    <description>Only for IVF Doctors. Should reference the provider number they use at the clinic.</description>
    <label>Clinic Provider Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>