force-app/main/default/objects/Doctor__c/fields/Doctor_s_Signature__c.field-meta.xml
<CustomField>
    <fullName>Doctor_s_Signature__c</fullName>
    <label>Doctor&apos;s Signature</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>