force-app/main/default/objects/Doctor__c/fields/Dorevitch_Bill_Code__c.field-meta.xml
<CustomField>
    <fullName>Dorevitch_Bill_Code__c</fullName>
    <label>Dorevitch Bill Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>