force-app/main/default/objects/Doctor__c/fields/Internal_Doctor__c.field-meta.xml
<CustomField>
    <fullName>Internal_Doctor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal Doctor</label>
    <type>Checkbox</type>
</CustomField>