force-app/main/default/objects/Doctor__c/fields/Internal_Doctor_Linkage__c.field-meta.xml
<CustomField>
    <fullName>Internal_Doctor_Linkage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Doctor Linkage</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Doctors</relationshipName>
    <type>Lookup</type>
</CustomField>