force-app/main/default/objects/Doctor__c/fields/Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address__c</fullName>
    <formula>Mailing_Street__c&amp;&quot; &quot;&amp;	Mailing_City__c&amp;&quot; &quot;&amp;Mailing_State__c&amp;&quot;,&quot;&amp;&quot; &quot;&amp;Mailing_Post_Code__c&amp;&quot;.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Address</label>
    <type>Text</type>
</CustomField>