force-app/main/default/objects/Doctor__c/fields/Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>Mailing_City__c</fullName>
    <label>Mailing Suburb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>