force-app/main/default/objects/Doctor__c/fields/Mailing_Post_Code__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Post_Code__c</fullName>
    <label>Mailing Post Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>