force-app/main/default/objects/Doctor__c/fields/Post_nominal__c.field-meta.xml
<CustomField>
    <fullName>Post_nominal__c</fullName>
    <label>Post-nominal</label>
    <length>200</length>
    <type>Text</type>
</CustomField>