force-app/main/default/objects/Doctor__c/fields/Practice__c.field-meta.xml
<CustomField>
    <fullName>Practice__c</fullName>
    <label>Practice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>