force-app/main/default/objects/Doctor__c/fields/Provider_Number__c.field-meta.xml
<CustomField>
    <fullName>Provider_Number__c</fullName>
    <label>Provider Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>