force-app/main/default/objects/Doctor__c/fields/Type_of_Doctor__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Doctor__c</fullName>
    <label>Type of Doctor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GP</fullName>
            </value>
            <value>
                <fullName>Specialist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>