force-app/main/default/objects/Doctor__c/validationRules/Create_Doctor_Linkage.validationRule-meta.xml
<ValidationRule>
    <fullName>Create_Doctor_Linkage</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  Internal_Doctor__c = TRUE,
  ISBLANK(Internal_Doctor_Linkage__c)
)</errorConditionFormula>
    <errorDisplayField>Internal_Doctor__c</errorDisplayField>
    <errorMessage>You MUST assign the internal doctor linkage if ticking this box, otherwise crucial system functions and eConsents will fail.</errorMessage>
</ValidationRule>