force-app/main/default/objects/Doctor__c/listViews/All_Doctors.listView-meta.xml
<ListView>
    <fullName>All_Doctors</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Doctors</label>
</ListView>