force-app/main/default/objects/Doctor__c/listViews/Our_Doctors.listView-meta.xml
<ListView>
    <fullName>Our_Doctors</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Internal_Doctor__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Our Doctors</label>
</ListView>